<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.ui.detail_statement.view.DetailStatementActivity">

  <ImageButton
      android:id="@+id/ibBack"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:backgroundTint="@android:color/transparent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_back"
      tools:ignore="SpeakableTextPresentCheck" />

  <TextView
      android:id="@+id/tvStatement"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:backgroundTint="#202021"
      android:text="@string/comprovante"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/ibBack"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.39"
      app:layout_constraintStart_toEndOf="@+id/ibBack"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:id="@+id/dividerDatailStatement"
      android:layout_width="match_parent"
      android:layout_height="3dp"
      android:background="?android:attr/listDivider"
      android:layout_marginTop="16dp"
      android:backgroundTint="#202021"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvStatement" />

  <TextView
      android:id="@+id/tvMovimentationType"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tipo_de_movimentacao"
      android:textSize="16sp"
      android:textStyle="bold"
      android:backgroundTint="#202021"
      android:layout_marginTop="25dp"
      android:layout_marginStart="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/dividerDatailStatement" />

  <TextView
      android:id="@+id/tvMovimentationTypeValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="#202021"
      android:text="@string/transferencia_enviada"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvMovimentationType" />

  <TextView
      android:id="@+id/tvAmountStatementDatail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="#202021"
      android:text="@string/label_valor"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvMovimentationTypeValue" />

  <TextView
      android:id="@+id/tvAmountStatementDatailValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="#202021"
      android:text="@string/valor_da_transacao"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvAmountStatementDatail" />

  <TextView
      android:id="@+id/tvToStatementDetail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="#202021"
      android:text="@string/label_recebedor"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvAmountStatementDatailValue" />

  <TextView
      android:id="@+id/tvToStatementDetailValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="#202021"
      android:text="@string/nome_do_recebedor"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvToStatementDetail" />

  <TextView
      android:id="@+id/tvBank"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="#202021"
      android:text="@string/label_instituicao_bancaria"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvToStatementDetailValue" />

  <TextView
      android:id="@+id/tvBankValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="#202021"
      android:text="@string/nome_instituicao_bancaria"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvBank" />

  <TextView
      android:id="@+id/tvDateTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="#202021"
      android:text="@string/label_data_hora"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvBankValue" />

  <TextView
      android:id="@+id/tvDateTimeValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="#202021"
      android:text="@string/data_hora_da_transacao"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvDateTime" />

  <TextView
      android:id="@+id/tvAuthentication"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="#202021"
      android:text="@string/label_autenticacao"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvDateTimeValue" />

  <TextView
      android:id="@+id/tvAuthenticationValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="#202021"
      android:text="@string/num_autenticacao"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvAuthentication" />

  <Button
      android:id="@+id/btShare"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:paddingVertical="15dp"
      android:text="@string/btn_compartilhar"
      android:textSize="18sp"
      android:textAllCaps="false"
      android:backgroundTint="#00C1AF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvAuthenticationValue" />


</androidx.constraintlayout.widget.ConstraintLayout>